Fixing FindBugs issues.