@@ -95,7 +95,7 @@ public class ServerLocationPanel extends JPanel implements WizardDescriptor.Pane
         // set the required properties, so that the panel appear correct in
         // the steps
         putClientProperty("WizardPanel_contentData", steps); // NOI18N
-        putClientProperty("WizardPanel_contentSelectedIndex", new Integer(index)); // NOI18N
+        putClientProperty("WizardPanel_contentSelectedIndex", Integer.valueOf(index)); // NOI18N
 
         // register the supplied listener
         addChangeListener(listener);
